# orizon

orizon-arch-dev/orizon-engin/applicationWatch/: CMakeLists.txt  main.cpp
orizon-arch-dev/orizon-engin/applicationWatch/cacheApplication/: buildCacheFolder.cpp  buildCacheFolder.h
orizon-arch-dev/orizon-engin/applicationWatch/flatpak/: Flatpak.cpp  Flatpak.h
orizon-arch-dev/orizon-engin/applicationWatch/pacman/: Pacman.cpp  Pacman.h  pacman.cpp  pacman.h
orizon-arch-dev/orizon-engin/applicationWatch/test/: pacmanTest.cpp  pacmanTest.h
orizon-arch-dev/orizon-frontend/: .qmlls.ini  shell.qml
orizon-arch-dev/orizon-frontend/components/footer/: Footer.qml  qmldir
orizon-arch-dev/orizon-frontend/components/search/: Search.qml  qmldir
orizon-arch-dev/orizon-frontend/components/searchItem/: SearchItem.qml  qmldir
orizon-arch-dev/orizon-frontend/theme/color/: Color.qml
